# EAO

./: .gitignore  .prof_stats  README.md  eao.html  environment.yml  example_chp.ipynb  genindex.html  index.html  main.ipynb  objects.inv  out_portf.json  out_price_grid.json  prices_test_results.csv  py-modindex.html  requirements.txt  samples.html  search.html  searchindex.js  setup.cfg  special_test_results.csv  summary_test_results.csv  test_output.xlsx  test_portf.json
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  unittests_doc.yml
_sources/: eao.rst.txt  index.rst.txt  samples.rst.txt
doc/source/: conf.py  eao.rst  results.xlsx  samples.rst
eao/: __init__.py  assets.py  io.py  network_graphs.py  optimization.py  portfolio.py  serialization.py  stoch_lin_prog.py
eaopack/: __init__.py  assets.py  basic_classes.py  io.py  network_graphs.py  optimization.py  portfolio.py  requirements.txt  serialization.py  stoch_lin_prog.py
samples/combined_heat_power/: chp_sample.html  chp_sample.ipynb  linkedAsset_sample.html  linkedAsset_sample.ipynb
samples/cross_commodity/: cross_commodity_sample.html  cross_commodity_sample.ipynb
samples/green_ppa/: sample_green_ppa.html  sample_green_ppa.ipynb
samples/grid and battery/: battery_own_consumption.html  battery_own_consumption.ipynb
samples/marginal_costs/: marginal_costs.html  marginal_costs.ipynb
samples/mixing_long_and_short_term/: mixing_long_and_short_term.html  mixing_long_and_short_term.ipynb
samples/order_book/: order_book_battery.html  order_book_battery.ipynb
samples/parameter_management/: parameter_management.html
samples/robust_optimization/: robust_optimization_szenarios.html  robust_optimization_szenarios.ipynb
samples/split_optimization/: split_optimization.html  split_optimization.ipynb
tests/: 2020_price_sample.csv  asset_tests.py  demo_portf.json  plant_test_data.csv  test_CHP_asset.py  test_MIP.py  test_TypedDict.py  test_asset.py  test_asset_freq.py  test_battery.py  test_io.py  test_new_asset_fnct.py  test_optimization.py  test_periodicity.py  test_portfolio.py  test_result_asset.JSON  test_setting_params.py  test_solvers.py  test_tz.py  test_various.py
(+45 files in other folders)
