[metadata]
name = eaopack
version = 1.0.4
author = Tobias Pfingsten, Daniel Oeltz
description = A Framework for Optimizing Decentralized Portfolios and Green Supply
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EnergyAssetOptimization/EAO
project_urls =
    Bug Tracker = https://github.com/EnergyAssetOptimization/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests
    doc
