[metadata]
name = eaopack
version = 2.1.2
author = The EAO development Team
description = A Framework for Optimizing Decentralized Portfolios and Green Supply
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EnergyAssetOptimization/EAO
project_urls =
    Bug Tracker = https://github.com/EnergyAssetOptimization/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    pandas
    scipy
    networkx
    cvxpy  
    cvxopt
    openpyxl
[options.packages.find]
exclude =
    tests
    doc
