[metadata]
name = eaopack
version = 2.1.5
author = The EAO development Team
description = A Framework for Optimizing Decentralized Portfolios and Green Supply
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EnergyAssetOptimization/EAO
project_urls =
    Bug Tracker = https://github.com/EnergyAssetOptimization/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy <= 2.1.3
    pandas <= 2.2.3
    scipy <= 1.14.1
    openpyxl <= 3.1.5
    cvxpy <= 1.6
    pyscipopt <= 5.2.1
    networkx <= 3.3
    matplotlib <= 3.9.2    
[options.packages.find]
exclude =
    tests
    doc
